# Hands-In-The-Web

./: CMakeLists.txt  LICENSE  README.md  index.html
VS2022_solution/: Hands-In-The-Web.sln  Hands-In-The-Web.vcxproj  Hands-In-The-Web.vcxproj.filters
Xcode_Project/HandsInTheWeb/HandsInTheWeb.xcodeproj/: project.pbxproj
dependencies/AL/AL/lib/win/debug/: OpenAL32.lib  common.lib  ex-common.lib
dependencies/AL/AL/lib/win/release/: common.lib  ex-common.lib
dependencies/Alembic/inc/mac/Alembic/Util/: Config.h
dependencies/Alembic/inc/win/Alembic/Util/: Config.h
dependencies/Imath/lib/win/: Half-2_5.lib  IexMath-2_5.lib  Imath-2_5.lib
dependencies/Imath/lib/win/release/: Iex-2_5.lib
dependencies/dr_libs/dr_libs/: dr_wav.c
dependencies/draco/draco/core/: bit_utils.h
inc/: AABB.h  AlembicMesh.h  AnimatedMesh.h  AudioEngine.h  AudioSource.h  Blending.h  Camera.h  Camera3.h  Clip.h  CrossFadeControllerMultiple.h  CrossFadeTarget.h  FiniteStateMachine.h  FlyCam.h  GLTFLoader.h  Game.h  Line.h  Octree.h  OctreeNode.h  Plane.h  PlayState.h  Player.h  Pose.h  Quat.h  Ray.h  RearrangeBones.h  ResourceManager.h  SceneGraph.h  Shader.h  ShaderLoader.h  SimpleMesh.h  Skeleton.h  Sky.h  StaticMesh.h  Texture.h  TextureLoader.h  Track.h  Transform.h  TransformTrack.h  Triangle.h  TriangleAABB.h  (+9 more)
public/: Hands-In-The-Web-UI.js  Hands-In-The-Web.js  Hands-In-The-Web.wasm  index.html
resources/models/geisha/: geisha.glb
resources/models/humans/: woman.glb
resources/models/level/: level.gltf
resources/models/samurai/: samurai.glb
resources/models/text/: handy_roboto_black.glb
resources/shaders/: animated_mesh_with_pregenerated_skin_matrices.vert  baked_illumination.frag  blinn_phong.frag  blinn_phong.vert  diffuse_illumination.frag  gourad.frag  gourad.vert  hands.frag  hands.vert  line.frag  line.vert  sky.frag  sky.vert  static_mesh_with_normals.vert  static_mesh_without_normals.vert
src/: AABB.cpp  AlembicMesh.cpp  AnimatedMesh.cpp  AudioEngine.cpp  AudioSource.cpp  Blending.cpp  Camera.cpp  Camera3.cpp  CrossFadeControllerMultiple.cpp  CrossFadeTarget.cpp  FiniteStateMachine.cpp  GLTFLoader.cpp  Game.cpp  Line.cpp  Octree.cpp  OctreeNode.cpp  Plane.cpp  PlayState.cpp  Player.cpp  Quat.cpp  Ray.cpp  RearrangeBones.cpp  Renderer.cpp  SceneABC.cpp  SceneGraph.cpp  Shader.cpp  ShaderLoader.cpp  SimpleMesh.cpp  Sky.cpp  StaticMesh.cpp  Texture.cpp  TextureLoader.cpp  Track.cpp  Transform.cpp  Triangle.cpp  TriangleAABB.cpp  Utility.cpp  World.cpp  main.cpp  window.cpp
